# short

./: Cargo.toml
migrations/2021-12-04-134913_create_links/: down.sql  up.sql
src/: api.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs  schema.rs
