[package]
name = "shoot"
version = "0.1.0"
authors = ["MichaelConnor Buchan <mikey@blindcomputing.org>"]
description = "A link aggregator, organiser and shortener"
license = "agpl-3-or-later"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
async-std = { version = "1.10.0", features = ["attributes"] }
deadpool-diesel = { version = "0.3.1", features = ["postgres", "rt_async-std_1"] }
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
once_cell = "1.8.0"
