[package]
name = "short"
version = "0.1.0"
authors = ["MichaelConnor Buchan <mikey@blindcomputing.org>"]
description = "A link aggregator, organiser and shortener"
license = "agpl-3-or-later"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.51"
async-std = { version = "1.10.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["std", "serde"], default-features = false }
deadpool-diesel = { version = "0.3.1", features = ["postgres", "rt_async-std_1"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.15.0"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[features]
